--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
   --color-red-primary: #e22e35;
   --color-red-alt: #a6161e;
   --color-chetwoodBlue: #1a1e4c;
+  --breakpoint-sm: 370px;
 }
 
 @theme inline {
